example/k8s/ingress/elastic-job-Ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-job-lite-console
  namespace: elastic-job
  labels:
    app: elastic-job-lite-console
spec:
  ports:
    - port: 8899
      targetPort: 8899
  selector:
    app: elastic-job-lite-console



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-job-lite-console
  labels:
    app: elastic-job-lite-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic-job-lite-console
  template:
    metadata:
      labels:
        app: elastic-job-lite-console
    spec:
      containers:
        - name: elastic-job-lite-console
          image: registry.cn-hangzhou.aliyuncs.com/engine/elastic-job-lite-console:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8899


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elastic-job-lite-console
  namespace: elastic-job
  labels:
    app: elastic-job-lite-console
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
#  backend:
#    serviceName: elastic-job-lite-console
#    servicePort: 8899
  rules:
    - host: console.elasticjob.com
      http:
        paths:
          - path: /
            backend:
              serviceName: elastic-job-lite-console
              servicePort: 8899
